<resources>
    <string name="app_name">Astrologion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="aries_desc">At their core, Aries do what they want and do things their way. They are unafraid of conflict, highly competitive, honest and direct. An Aries is not weighed down by the freedom of choice, and is perhaps the sign that is least conflicted about what they want. They throw themselves at the world eagerly and without fear. It is one of their most commendable qualities, but also what causes them a great deal of pain and grief.

Aries are driven by a desire to prove themselves and their strength. They naturally take charge and are competitive and ambitious. Aries are spontaneous and courageous. They have a sense of adventure and love to explore. They\’re determined and bold, and are good at initiating new projects. They have high energy and can initiate quick actions. They can also be impatient, but are naturally active and don\’t like to waste time.

While Aries like competition, they don\’t like to play games. They are highly self-aware, have strong opinions and are always ready to defend them. </string>
    <string name="cancer_desc">A Cancer\’s personality is like wading chest deep in a lake of warm water. It feels sparkling and cool while it\’s touching the body, but you know that if you were to dive in, it would feel warm.

Cancer\’s self-awareness is like the tides. They\’re constantly moving in and out of focus. Their personality is layered. They have many moods, some of which are contradictory, but they also have a deep, core self that persists.

Cancers are weighed down by their own sorrows and the sorrows of those around them. They are frequently haunted by grief. It\’s hard for them to share their pain with others, and they are often afraid to be vulnerable because they carry a fear that people will use their weaknesses against them. Cancers have learned to hide their pain to avoid burdening anyone else. They pretend they\’re okay when they\’re not.

Their emotions are like an exposed nerve. They can feel everything. They\’re like a tuning fork that vibrates at the slightest provocation. They tend to carry deep grudges because they can\’t forget the emotional sting of a slight. </string>
    <string name="leo_desc">Leos are bold, warm, and loving. They are also the ultimate showmen. They can dazzle with the theatrical flair of a Broadway star and the charisma of a politician. They are captivating personalities. They have a way with words, and can speak eloquently on just about any topic, no matter how quickly they\’ve just been introduced to it.

Leos inject ambition into everything they do. They are ruled by the heart. They are brash and confident and trust their instincts. Their actions are natural and effortless.

Leos have an unrelenting appetite for growth that is easily satiated by the praise of others. When they are hurting, it shows. They will use their anger as a protective wall to shield their vulnerabilities. They want to be perceived as unbreakable because they are scared of admitting vulnerability, needing things from other people, being incomplete.</string>
    <string name="virgo_desc">Virgos are known for being perfectionists. Clean freaks. They are known for their attention to detail. They can find patterns where there are none. They can be finicky and critical to a fault.

It’s true that Virgos are very particular, but that doesn\’t necessarily mean that they keep neat spaces. Their particularities and habits don\’t necessarily line up with traditional views of cleanliness. They could live in what looks like a Tasmanian devil-style dust storm ruin, but still impose a “no shoes in the house” or “no outside clothes on the bed” rule. Maybe their house looks cluttered, but they still know where everything is. Everything has its place. Virgos prefer to exist in organized spaces, but put their service orientation over their own comfort. This can mean that a Virgo is too busy fixing the lives of those around them to put much work into providing for their own needs. They\’re rarely motivated by their own self-interest.

Virgos are also known for being intelligent, but because of their introverted nature they can sometimes have trouble expressing themselves. Talking to them may feel like floating on the surface of existence, and like you never know what they\’re thinking and feeling deep inside. Their emphasis on thoughts and ideas can seem like a cover-up for their lack of emotional depth. In reality, they are a fortress unto themselves—the definition of self-containment. Virgos will be endlessly accepting of whatever you have to share, but may not see the value in spontaneously performing a similar excavation of themselves for anyone else.</string>
    <string name="libra_desc">Libras are difficult to really understand because they seem so contradictory on the surface. They\’re simultaneously extroverted and introverted, strategic and spontaneous, focused and intuitive. This variability makes it difficult to pin down their true character. They are an entire constellation of personalities. Libras are different depending on who they\'re around.

This is because Libras value empathy. They are receptive. They can be other people\’s mirrors. Because of this, they have strong opinions about other people, but take a long time to understand themselves.

They want to be admired not for their talents but for their charm. They want to be seen as the responsible figure who can balance out the turbulent elements around them. They feel an intense amount of guilt and shame when they are unhappy because they know that their unhappiness affects everyone around them.</string>
    <string name="scorpio_desc">The Scorpio personality is a profound chasm of infinite complexity (or at least how they project themselves). They are difficult people to get to know. They are psychological trap doors. They socialize from behind a double-sided mirror, always scanning, reading you while you can only see your own reflection. They prefer to be the people asking the questions. They remove your skin with their perceptive scalpel and take inventory of your pulsing viscera. They probe and push. They know the little things that make you tick. Your pressure points. The subtle ways to procure the answer they\’re seeking. They are keenly aware of power, its flows, and their position within its matrix.

Despite their ability to be generally popular, there\’s something very lonely about Scorpios. They have a ruthless view of the world. Eat or be eaten. Every human interaction is a meeting of opposing powerful forces. A clashing of wants and needs where somebody wins and somebody loses. Their knowledge of other people\’s internal structures gives them an edge over the competition. They know how to play people against each other. They are forthcoming and evasive at the same time, depending on what is situationally beneficial. They are blunt, but not tactlessly so. They are intentional about the information they reveal. They\’re not liars, they do not espouse falsehoods, but they are masters of opening windows on certain truths while concealing others behind heavy curtains. </string>
    <string name="sagittarius_desc">Sagittarius is the ultimate empiricist. They will always choose principles over feelings and will often question who they are. They move from job to job, philosophy to philosophy, belief to belief. They are explorers of the human condition and are unafraid of change. Sagittarians feel like the world is their playground. They love to explore the unknown. They want to understand how the world works.

On an unbounded quest to discover the whole of the universe inside of themselves, Sagittarians are unshackled from any particular worldly attachment. They are reckless in their pursuit of what they want, and often end up doing and experiencing things that defy conceptions of the possible.

Sagittarius is an explorer. They are both the fearless adventurer and the jaded critic. They understand that knowledge comes in two forms: the shallow, disposable kind that comes from external sources, and the kind that comes from within. Sagittarius knows that external knowledge can be easily gained while internal knowledge is exponentially deeper and more powerful. They\’re on a quest to delve into the depths of the universe inside the human mind. They don\’t do this to prove that they have all the answers, but instead because they know that the journey is the destination.</string>
    <string name="sun_desc">When someone asks you what your sign is, whether or not they know it, they\'re asking about the position of the sun at your moment of birth. The sun symbolizes our fundamental essence. This vibrant celestial body represents our ego, sense of self, basic personality, and general preferences. (You can read more about what your sun sign says about you right here.) The sun governs the zodiac sign of Leo, the vivacious, dynamic fire sign that exudes both bravery and theatricality. It takes approximately one month to transit — or move across — a zodiac sign.</string>
    <string name="moon_desc">The moon\'s gravitational pull regulates the climate and oceanic tides. Within astrology, the moon represents our emotional inner world. While the sun exposes our outer experience, the moon symbolizes everything beneath the surface. It represents the spiritual retreat of our most private selves. It governs the zodiac sign of Cancer, the sensitive, protective water sign that defines nurture, comfort, and security. The moon is the fastest moving celestial body in the sky and takes approximately two and a half days to transit a zodiac sign.</string>
    <string name="mercury_desc">The smallest and innermost planet of the solar system, Mercury is named after the Roman deity who served as a messenger to the gods. Within astrology, it symbolizes communication. While the moon reflects our emotions, this planet reflects logic and rationality. Mercury uses its clever intellect and relentless curiosity to analyze, sort, and classify, helping us synthesize and articulate complex ideas. It governs both air sign Gemini and earth sign Virgo, each representing a different side of Mercury’s expression: Chatty Gemini is output, while analytical Virgo is input. Mercury takes 13 or 14 days to transit a zodiac sign and goes retrograde three or four times per year. This planet\'s infamous retrograde brings about communication mishaps, travel delays, and texts from exes. </string>
</resources>