<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundc"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="The Planets"
                android:textColor="#ccc65a"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="Each planet in the following list symbolizes something in all our lives - a universal component of our experiences. They rule over different parts of our psyche - different desires, different needs that create who we are. Therefore your own personal combination of zodiac signs, planet locations and houses end up depicting a portrait of you in something known as the natal chart. We get this natal chart from a mapping of the heavens during the moment of your birth into the world. "
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!--SUN-->
            <TextView
                android:id="@+id/ariesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="THE SUN"
                android:textColor="#f2422e"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="ego, creativity"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/ariesImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/sun" />

            <TextView
                android:id="@+id/ariesDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sun_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--MOON-->
            <TextView
                android:id="@+id/taurusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="THE MOON"
                android:textColor="#b8b8b8"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/taurusDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="emotion"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/taurusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/moon" />

            <TextView
                android:id="@+id/taurusDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/moon_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--MERCURY-->
            <TextView
                android:id="@+id/mercuryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Mercury"
                android:textColor="#e0b270"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/geminiDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="communication"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/geminiImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mercury" />

            <TextView
                android:id="@+id/geminiDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/mercury_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--CANCER-->
            <TextView
                android:id="@+id/cancerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="CANCER"
                android:textColor="#cba6de"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/cancerDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="(JUNE 21 – JULY 22)"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/cancerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/cancer" />

            <TextView
                android:id="@+id/cancerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cancer_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--LEO-->
            <TextView
                android:id="@+id/leoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="LEO"
                android:textColor="#f2422e"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/leoDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="(JULY 23 – AUGUST 22)"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/leoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/leo" />

            <TextView
                android:id="@+id/leoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/leo_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--VIRGO-->
            <TextView
                android:id="@+id/virgoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="VIRGO"
                android:textColor="#46ab41"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/virgoDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="(AUGUST 23 – SEPTEMBER 22)"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/virgoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/virgo" />

            <TextView
                android:id="@+id/virgoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/virgo_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--LIBRA-->
            <TextView
                android:id="@+id/libraTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="LIBRA"
                android:textColor="#50a4ad"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/libraDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="(SEPTEMBER 23 – OCTOBER 22)"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/libraImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/libra" />

            <TextView
                android:id="@+id/libraDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/libra_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--SCORPIO -->
            <TextView
                android:id="@+id/scorpioTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="SCORPIO"
                android:textColor="#cba6de"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/scorpioDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="(OCTOBER 23 – NOVEMBER 21)"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/scorpioImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/scorpio" />

            <TextView
                android:id="@+id/scorpioDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/scorpio_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!--SAGITTARIUS-->
            <TextView
                android:id="@+id/sagittariusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="SAGITTARIUS"
                android:textColor="#f2422e"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/sagittariusDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="(NOVEMBER 22 – DECEMBER 21)"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/sagittariusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/sagittarius" />

            <TextView
                android:id="@+id/sagittariussDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sagittarius_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>